_includes/amigavision.css
/* ... */
* {
	cursor: url('/images/amiga-pointer.cur'), auto !important;
}

html {
  background: #2b2b40;
}
html,body {
  margin: 0;
  padding: 0;
}
body {
  font-family: "Libre Baskerville","Baskerville","Times New Roman","Times";
}
header {
  font-family: "San Francisco","Helvetica Neue","Arial";
}
a {
  color: #00a4ca;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}
img {
  width: 100%;
}
h1 strong,h2 strong {
  font-weight: 700;
}
h1 {
  font-weight: 300;
  font-size: 2.3em;
  margin: 0;
}
h2 {
  font-weight: 300;
  font-size: 2.2em;
  margin: 30px 0 0 0;
}
h3 {
  margin: 20px 0 10px 0;
}
h2+h3 {
  margin-top:20px;
}

p,address {
  /* font-size: 1.38em; */
  color: black;
  margin-bottom: 20px;
  font-weight: 300;
  line-height: 1.4em;
}

ul {
  padding-left: 20px
}

ol {
  padding-left: 30px
}

li {
  color: black;
  line-height: 1.4em;
  margin: 0.25em 0;
}

strong, b {
  font-weight: 600;
}

hr {
  color: black;
  margin: 1em auto;
  clear: both;
  font-size: 1.4em;
  text-align: center;
  border: none;
}

hr:after {
  content: "\2042";
}

pre {
  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
  color: black;
  background-color: rgb(239, 241, 242);  
  border-radius: 6px;
  padding: 16px;
  margin: 0 -16px 20px -16px;
	overflow: auto;
}

code {
  font-family: ui-monospace, SFMono-Regular, SF Mono, Menlo, Consolas, Liberation Mono, monospace;
  padding: .2em .4em;
  font-size: 85%;
  border-radius: 6px;
  background-color: rgb(239, 241, 242);
	overflow: auto;
}

pre code {
  padding: 0;
}

.bottom-cta {
  background: linear-gradient(to bottom,#4182e4 0%,#4182e4 100%);
  color: #fff;
  text-align: center;
  margin: 0;
  padding: 100px 0;
}
.bottom-cta h2 {
  margin-bottom: 50px;
}
.testimonial {
  background: #f5f5f5;
  margin: 0;
  padding: 100px 0;
}
.testimonial .testimonial-block {
  max-width: 750px;
  width: 98%;
  margin: 0 auto;
}
@media (min-width:450px) {.testimonial .testimonial-block {
    display: -webkit-box;
    display: -webkit-flex;
    display: -moz-flex;
    display: -ms-flexbox;
    display: flex;
  }
  .testimonial .testimonial-block blockquote {
    -webkit-flex: 1;
    flex: 1;
  }
}

.content section:nth-child(odd) {
background-color: #f5f5f5;
}
.hero {
color: #ffffff;
text-align: center;
background: linear-gradient(to bottom,#4182e4 0%,#4182e4 100%) no-repeat #a05fb7;
padding-top: 10px;
}
.hero h1 {
margin-top: 30px;
}
.hero h2 {
font-size: 1em;
}
.hero p {
color: #fff;
}
@media (min-width:768px) {.flex {
  display: -webkit-box;
  display: -webkit-flex;
  display: -moz-flex;
  display: -ms-flexbox;
  display: flex;
  align-items: center;
  flex-direction: row;
  }
  .flex .text,.flex .image {
  -webkit-flex: 1;
  flex: 1;
  padding: 0 20px;
  }
  .content section:nth-child(odd) .flex {
  flex-direction: row-reverse;
  }
}

.container,.text-container {
margin: 0 auto;
position: relative;
padding: 0 20px;
}
.text-container {
max-width: 750px;
}
.container {
max-width: 1140px;
}
.container.max-container {
max-width: 100%;
padding: 0;
}
header .container {
display: flex;
flex-direction: column;
align-items: flex-start;
}
header {
color: #fff;
padding: 20px 0;
background: #4182e4;
background: linear-gradient(to bottom,#4182e4 0%,#4182e4 100%) no-repeat #4182e4;
}
header a {
color: #fff;
text-decoration: none;
z-index: 1;
position: relative;
}
header a:hover {
text-decoration: none;
}
header .company-name {
font-size: 1.7em;
line-height: 0;
margin: 18px auto 10px auto;
width: 100%;
text-align: center;
}
header .company-name a {
display: inline-block;
}
header .company-name img {
display: block;
width: auto;
max-width: 100%;
height: 42px;
margin: 0 auto;
}
.content {
background: white;
padding: 0;
position: relative;
}
.screenshot {
max-width: 100%;
height: auto;
display: block;
border-radius: 5px;
margin-left: auto;
margin-right: auto;
position: relative;
}
section {
padding: 80px 0;
}
.subtext {
margin-top: 10px;
text-align: center;
}
.cta {
margin: 60px 0;
}
.page h2 {
text-align: center;
}
blockquote {
padding: 18px 25px;
margin: 0;
quotes: "“" "”" "‘" "’";
font-style: italic;
}
blockquote .author {
display: block;
font-weight: bold;
margin: 10px 0 0 0;
font-size: .85em;
font-style: normal;
}
blockquote p {
display: inline;
}
blockquote:before {
color: #ccc;
content: open-quote;
font-size: 4em;
line-height: 0.1em;
margin-right: 0.25em;
vertical-align: -0.4em;
}
.square-image {
width: 150px;
height: 150px;
overflow: hidden;
margin: 25px auto 0 auto;
position: relative;
border-radius: 200px;
}
.square-image img {
position: absolute;
left: -1000%;
right: -1000%;
top: -1000%;
bottom: -1000%;
margin: auto;
width: 300px;
}
.page {
margin-bottom: 0;
padding-bottom: 80px;
}
.center-text {
text-align: center;
}
.editor-link {
display: none;
margin-top: 0;
}
.editor-link .btn {
border: 0;
border-radius: 2px;
width: 100%;
max-width: 500px;
box-sizing: border-box;
font-size: 2rem;
text-decoration: none;
padding: 10px 15px;
margin: 0;
font-size: 18px;
cursor: pointer;
background-color: #f7e064;
color: #333;
box-shadow: 1px 1px 5px 0 rgba(0,0,0,0.2);
}
.editor-link .btn:hover {
background-color: #f4d525;
color: #333;
}
.plans {
-webkit-flex-flow: wrap;
-moz-flex-flow: wrap;
-ms-flex-flow: wrap;
flex-flow: wrap;
padding: 50px 0 30px 0;
}
.plans .plan {
list-style: none;
padding: 0;
margin: 0 10px 50px 10px;
text-align: center;
border: 1px solid #eee;
border-radius: 5px;
box-shadow: 0px 0px 10px #eee;
width: 100%;
}
.plans .plan .highlighted {
font-size: 1.2em;
}
.plans .plan .pricing-cta {
padding: 0;
}
.plans .plan .pricing-cta a {
display: block;
box-sizing: border-box;
padding: 20px 0;
border-radius: 0 0 2px 2px;
border: 0;
}
@media (min-width:768px) {.plans .plan {
  -webkit-flex: 1;
  flex: 1;
  }
}

.plans .plan li {
border-top-right-radius: 5px;
border-top-left-radius: 5px;
padding: 20px 0;
}
.plans .plan li h3 {
padding: 0;
margin: 0;
color: #fff;
font-weight: normal;
}
.faq {
color: #666;
}
/* ... */

